[gd_scene load_steps=7 format=2]

[ext_resource path="res://assets/Robot/Robot.glb" type="PackedScene" id=1]
[ext_resource path="res://src/player/Player.gd" type="Script" id=2]
[ext_resource path="res://src/player/SpringArm.gd" type="Script" id=3]

[sub_resource type="SphereShape" id=3]
margin = 0.001
radius = 0.471003

[sub_resource type="BoxShape" id=1]
extents = Vector3( 0.562248, 1, 1 )

[sub_resource type="Animation" id=2]
resource_name = "Walk"

[node name="Player" type="KinematicBody"]
script = ExtResource( 2 )

[node name="Pivot" type="Spatial" parent="."]

[node name="Robot" parent="Pivot" instance=ExtResource( 1 )]
transform = Transform( -1, 0, -8.74228e-08, 0, 1, 0, 8.74228e-08, 0, -1, -0.183525, -0.0365214, 0 )

[node name="Skeleton" parent="Pivot/Robot/Armature" index="0"]
bones/3/bound_children = [ NodePath("left_foot") ]
bones/6/bound_children = [ NodePath("right_foot") ]

[node name="left_foot" type="BoneAttachment" parent="Pivot/Robot/Armature/Skeleton" index="1"]
transform = Transform( -0.999279, -0.0109647, 0.0363399, 0.037958, -0.288651, 0.956682, -1.78814e-07, 0.957373, 0.28886, 1.86879, 0.276815, -0.502075 )
bone_name = "Stopa.L"

[node name="raycast_left" type="RayCast" parent="Pivot/Robot/Armature/Skeleton/left_foot"]
transform = Transform( 0.99995, 0.00487942, -0.00871919, -0.00910304, 0.0851297, -0.996327, -0.00411925, 0.996359, 0.0851697, -0.036232, -0.269436, -0.207496 )
enabled = true

[node name="right_foot" type="BoneAttachment" parent="Pivot/Robot/Armature/Skeleton" index="2"]
transform = Transform( -0.999829, 0.0129126, 0.0132192, 0.00759623, -0.36493, 0.931004, 0.0168457, 0.930945, 0.36477, -1.96954, 0.300903, -0.457815 )
bone_name = "Stopa.R"

[node name="raycast_right" type="RayCast" parent="Pivot/Robot/Armature/Skeleton/right_foot"]
transform = Transform( 0.999999, -0.000711834, 0.00148944, 0.00156971, 0.130695, -0.991423, 0.000511054, 0.991423, 0.130696, 0.229708, -0.267183, -0.162612 )
enabled = true

[node name="ik_left_foot" type="SkeletonIK" parent="Pivot/Robot/Armature/Skeleton" index="3"]
process_priority = 1
root_bone = "Leg.L"
tip_bone = "Stopa.L"
use_magnet = true
magnet = Vector3( 0, 0, 10 )
target_node = NodePath("../../../../target_container_left/target_left")

[node name="ik_right_foot" type="SkeletonIK" parent="Pivot/Robot/Armature/Skeleton" index="4"]
process_priority = 1
root_bone = "Leg.R"
tip_bone = "Stopa.R"
use_magnet = true
magnet = Vector3( 0, 0, 10 )
target_node = NodePath("../../../../target_container_right/target_right")

[node name="BodyRay" type="RayCast" parent="Pivot/Robot/Armature/Skeleton" index="5"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 1.98311e-07, 2.63138, -2.26841 )
enabled = true
cast_to = Vector3( 0, -4, 0 )
debug_shape_thickness = 5

[node name="TargetLeft" type="Position3D" parent="Pivot/Robot"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 1.64861, 0.2, 1.21113 )

[node name="Area" type="Area" parent="Pivot/Robot/TargetLeft"]

[node name="TargetCubeL" type="CollisionShape" parent="Pivot/Robot/TargetLeft/Area"]
transform = Transform( -1, 0, 8.74228e-08, 0, 1, 0, -8.74228e-08, 0, -1, -0.0749995, 0, 0.0462815 )
shape = SubResource( 3 )
disabled = true

[node name="RayTargetLeft" type="RayCast" parent="Pivot/Robot/TargetLeft"]
transform = Transform( 1, 0, 0, 0, 2, 0, 0, 0, 1, 0, 1, 0 )
enabled = true
debug_shape_thickness = 5

[node name="TargetRight" type="Position3D" parent="Pivot/Robot"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -2.0214, 0.2, 1.21113 )

[node name="Area" type="Area" parent="Pivot/Robot/TargetRight"]

[node name="TargetCubeR" type="CollisionShape" parent="Pivot/Robot/TargetRight/Area"]
transform = Transform( -1, 0, 8.74228e-08, 0, 1, 0, -8.74228e-08, 0, -1, -0.0749995, 0, 0.0462815 )
shape = SubResource( 3 )
disabled = true

[node name="RayTargetRight" type="RayCast" parent="Pivot/Robot/TargetRight"]
transform = Transform( 1, 0, 0, 0, 2, 0, 0, 0, 1, 0, 1, 0 )
enabled = true
debug_shape_thickness = 5

[node name="target_container_left" type="Position3D" parent="Pivot"]
transform = Transform( 0.5, 0, 0, 0, 1, 0, 0, 0, 1, -1.54802, 0.960617, 0.339931 )

[node name="target_left" type="Position3D" parent="Pivot/target_container_left"]
transform = Transform( 0.999829, -0.0129126, -0.0132192, 0.00564009, -0.467986, 0.883718, -0.0175976, -0.883642, -0.467833, -1.07803, -0.879423, 0.130694 )

[node name="target_container_right" type="Position3D" parent="Pivot"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 2.72811, 1.11103, 0.029542 )

[node name="target_right" type="Position3D" parent="Pivot/target_container_right"]
transform = Transform( 0.999829, -0.0129126, -0.0132192, 0.00759623, -0.36493, 0.931004, -0.0168458, -0.930945, -0.36477, -0.940149, -0.879423, 0.425982 )

[node name="raycast_target_left" type="RayCast" parent="Pivot"]
transform = Transform( 0.999279, -0.0303982, -0.0227323, 0.0300632, 0.999437, -0.014939, 0.0231736, 0.0142436, 0.99963, -1.90041, 0.482623, 0.518662 )
enabled = true

[node name="raycast_target_right" type="RayCast" parent="Pivot"]
transform = Transform( 0.999279, 0.0338841, 0.0171084, -0.0339769, 0.999409, 0.00516555, -0.0169233, -0.00574282, 0.99984, 2.09535, 0.433906, 0.50354 )
enabled = true

[node name="CollisionShape" type="CollisionShape" parent="."]
transform = Transform( 2, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.02344, 0.756 )
shape = SubResource( 1 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/Walk = SubResource( 2 )

[node name="SpringArm" type="SpringArm" parent="."]
spring_length = 15.0
margin = 0.5
script = ExtResource( 3 )

[node name="Camera" type="Camera" parent="SpringArm"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 5.65769, 0 )
current = true

[node name="moveTarget" type="Position3D" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, -2.08221 )

[editable path="Pivot/Robot"]
